--- a/config_data.toml
+++ b/config_data.toml
@@ -105,23 +105,23 @@ statement_timeout = 15000
 [pools.sharded.shards.0]
 # [ host, port, role ]
 servers = [
-    [ "postgres", 5432, "primary" ],
-    [ "postgres", 5432, "replica" ]
+    [ "localhost", 5432, "primary" ],
+    [ "localhost", 5432, "replica" ]
 ]
 # Database name (e.g. "postgres")
 database = "postgres"
 
 [pools.sharded.shards.1]
 servers = [
-    [ "postgres", 5432, "primary" ],
-    [ "postgres", 5432, "replica" ],
+    [ "localhost", 5432, "primary" ],
+    [ "localhost", 5432, "replica" ],
 ]
 database = "postgres"
 
 [pools.sharded.shards.2]
 servers = [
-    [ "postgres", 5432, "primary" ],
-    [ "postgres", 5432, "replica" ],
+    [ "localhost", 5432, "primary" ],
+    [ "localhost", 5432, "replica" ],
 ]
 database = "postgres"
 
@@ -135,13 +135,13 @@ sharding_function = "pg_bigint_hash"
 
 [pools.simple_db.users.0]
 username = "postgres"
-password = "postgres"
+password = "password"
 pool_size = 5
 statement_timeout = 0
 
 [pools.simple_db.shards.0]
 servers = [
-    [ "postgres", 5432, "primary" ],
-    [ "postgres", 5432, "replica" ]
+    [ "localhost", 5432, "primary" ],
+    [ "localhost", 5432, "replica" ]
 ]
 database = "postgres"
