--- a/config_data.yml
+++ b/config_data.yml
@@ -13,7 +13,7 @@ general:
   admin_password: postgres
 pools:
   simple_db:
-    pool_mode: session
+    pool_mode: transaction
     default_role: primary
     query_parser_enabled: true
     primary_reads_enabled: true
