--- a/config_data.yml
+++ b/config_data.yml
@@ -13,7 +13,7 @@ general:
   admin_password: postgres
 pools:
   simple_db:
-    pool_mode: transaction
+    pool_mode: session
     default_role: primary
     query_parser_enabled: true
     primary_reads_enabled: true
@@ -29,12 +29,12 @@ pools:
         statement_timeout: 0
         database: postgres
         servers:
-          - host: localhost
+          - host: db
             port: 5432
             role: primary
             username: postgres
             password: password
-          - host: localhost
+          - host: db
             role: replica
             port: 5432
             username: postgres
