--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -2,12 +2,19 @@ version: '3.9'
 
 services:
   db:
-    build: .
+    image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_PASSWORD: exmaple
+    ports:
+      - 5432:5432
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+  pggat:
+    build: ../
+    restart: always
+    ports:
+      - 6432:6432
