fix parse: allow multi line comments before identifiers

--- a/config_data.yml
+++ b/config_data.yml
@@ -12,7 +12,7 @@ general:
   admin_username: postgres
   admin_password: postgres
 pools:
-  simple_db:
+  postgres:
     pool_mode: session
     default_role: primary
     query_parser_enabled: true
@@ -33,12 +33,29 @@ pools:
             port: 5432
             role: primary
             username: postgres
-            password: password
+            password: example
+  regression:
+    pool_mode: session
+    default_role: primary
+    query_parser_enabled: true
+    primary_reads_enabled: true
+    sharding_function: pg_bigint_hash
+    users:
+      - username: postgres
+        password: password
+        role: writer
+        pool_size: 20
+        statement_timeout: 0
+    shards:
+      - pool_size: 5
+        statement_timeout: 0
+        database: regression
+        servers:
           - host: db
-            role: replica
             port: 5432
+            role: primary
             username: postgres
-            password: password
+            password: example
   sharded:
     pool_mode: transaction
     default_role: any
