support environmental variables reaplcement through

--- a/config_data.yml
+++ b/config_data.yml
@@ -55,7 +55,7 @@ pools:
             port: 5432
             role: primary
             username: postgres
-            password: example
+            password: ENV$PGGAT_DB_PASS
   sharded:
     pool_mode: transaction
     default_role: any
