--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     image: prest/prest
     restart: always
     environment:
-      PREST_PG_URL: postgres://postgres:example@db:5432/prest
+      PREST_PG_URL: postgres://postgres:example@pggat:6432/prest
       PREST_DEBUG: true
       PREST_SSL_MODE: disable
     ports:
