allow lock recovery from panics

--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -1,5 +1,5 @@
 [pgbouncer]
-pool_mode = transaction
+pool_mode = session
 auth_file = userlist.txt
 listen_addr = *
 
@@ -7,5 +7,5 @@ listen_addr = *
 postgres =
 
 [databases]
-uniswap = host=localhost
+regression = host=localhost
 postgres = host=localhost
