--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -7,5 +7,5 @@ listen_addr = *
 postgres =
 
 [databases]
-regression = host=localhost
+regression = host=localhost datestyle=Postgres,MDY intervalstyle=postgres_verbose timezone=PST8PDT
 postgres = host=localhost
