--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -2,7 +2,7 @@
 pool_mode = transaction
 auth_file = userlist.txt
 listen_addr = *
-track_extra_parameters = IntervalStyle, session_authorization, default_transaction_read_only
+track_extra_parameters = IntervalStyle, session_authorization, default_transaction_read_only, search_path
 
 [users]
 postgres =
