fix some auth and connection bugs

--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -8,5 +8,4 @@ track_extra_parameters = IntervalStyle, session_authorization, default_transacti
 postgres =
 
 [databases]
-regression = host=localhost datestyle=Postgres,MDY timezone=PST8PDT
-postgres = host=localhost
+* = host=localhost datestyle=Postgres,MDY timezone=PST8PDT
