--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -3,9 +3,7 @@ pool_mode = transaction
 auth_file = userlist.txt
 listen_addr = *
 track_extra_parameters = IntervalStyle, session_authorization, default_transaction_read_only, search_path
-
-[users]
-postgres =
+auth_user = postgres
 
 [databases]
 * = host=localhost datestyle=Postgres,MDY timezone=PST8PDT
