connection over unix socket

--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -6,4 +6,4 @@ track_extra_parameters = IntervalStyle, session_authorization, default_transacti
 auth_user = postgres
 
 [databases]
-* = host=localhost datestyle=Postgres,MDY timezone=PST8PDT
+* = host=/tmp/ datestyle=Postgres,MDY timezone=PST8PDT
