--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -4,6 +4,7 @@ auth_file = userlist.txt
 listen_addr = *
 track_extra_parameters = IntervalStyle, session_authorization, default_transaction_read_only, search_path
 auth_user = postgres
+server_idle_timeout = 10
 
 [databases]
 * = host=/tmp/ datestyle=Postgres,MDY timezone=PST8PDT
