--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,3 +48,18 @@ trigger-builds:
       - artifact: generated-config.yml
         job: jsonnet
     strategy: depend
+
+trigger-master-deploy:
+  stage: deploy
+  needs:
+    - trigger-builds
+  image:
+    name: bitnami/kubectl:latest
+    entrypoint: [""]
+  only:
+    variables:
+      - $CI_COMMIT_BRANCH == "master"
+  script:
+    - kubectl config get-contexts
+    - kubectl config use-context gfx/gitlab-agents:gfxlabs-dev
+    - kubectl rollout restart deployment gfx-pggat
