--- a/pgbouncer.ini
+++ b/pgbouncer.ini
@@ -7,4 +7,4 @@ auth_user = postgres
 server_idle_timeout = 10
 
 [databases]
-* = host=/tmp/ datestyle=Postgres,MDY timezone=PST8PDT
+* = host=localhost datestyle=Postgres,MDY timezone=PST8PDT
