--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ coverage:
     - su -c initdb postgres
     - su -c "pg_ctl start > /dev/null" postgres
     - apk update
-    - apk add go
+    - apk add go=1.23.0
     - go run gotest.tools/gotestsum@latest --junitfile report.xml --format testname -- -coverprofile=coverage.txt -covermode count ./...
     - go tool cover -func=coverage.txt
     - go run github.com/boumenot/gocover-cobertura@master < coverage.txt > coverage.xml
