--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ test:
     - su -c initdb postgres
     - su -c "pg_ctl start > /dev/null" postgres
     - apk update
-    - apk add build-base go
+    - apk add build-base go=~1.23
     - CGO_ENABLED=1 go test -race ./...
 
 lint:
