--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ test:
     - CGO_ENABLED=1 go test -race ./...
 
 lint:
-  image: registry.hub.docker.com/docker/golangci-lint:1.59.0-go1.22.4
+  image: registry.hub.docker.com/golangci/golangci-lint:v1.59.1-alpine
   stage: test
   extends: .go-cache
   script:
