--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,5 @@
 run:
   deadline: 10m
-  skip-dirs:
-    - hack
 
 linters:
   disable-all: true
@@ -88,3 +86,6 @@ issues:
     - linters:
         - staticcheck
       text: "SA(1019|1029|5011)"
+  exclude-dirs:
+    - hack
+
