--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ include:
 
 variables:
   CAFE_BUILD_DOCKERFILES: "Dockerfile"
+  GOLANGCI_LINT_VERSION: 'v1.59.1'
 
 test:
   image: postgres:alpine
@@ -34,7 +35,7 @@ test:
     - CGO_ENABLED=1 go test -race ./...
 
 lint:
-  image: registry.gitlab.com/gitlab-org/gitlab-build-images:golangci-lint-alpine
+  image: golangci/golangci-lint:$GOLANGCI_LINT_VERSION
   stage: test
   extends: .go-cache
   script:
