--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,3 @@
-version: "2"
-
 run:
   timeout: 10m
 
@@ -15,35 +13,8 @@ linters:
     - prealloc
     - unconvert
     - unused
-    - cyclop
 
 linters-settings:
-  cyclop:
-    max-complexity: 30
-
-  gosec:
-    excludes:
-      - G115  # Integer overflow - intentional for PostgreSQL wire protocol compatibility
-
-  gocritic:
-    enabled-checks:
-      - ruleguard
-      - truncateCmp
-
-    disabled-checks:
-      - captLocal
-      - assignOp
-      - paramTypeCombine
-      - importShadow
-      - commentFormatting
-
-    enabled-tags:
-      - performance
-      - diagnostic
-      - opinionated
-    disabled-tags:
-      - experimental
-
   govet:
     disable:
       - deepequalerrors
@@ -51,13 +22,31 @@ linters-settings:
       - shadow
       - unsafeptr
 
+  gocritic:
+    enabled-checks:
+      - ruleguard
+      - truncateCmp
+    disabled-checks:
+      - captLocal
+      - assignOp
+      - paramTypeCombine
+      - importShadow
+      - commentFormatting
+
+  gosec:
+    excludes:
+      - G115  # Integer overflow - intentional for PostgreSQL wire protocol compatibility
+
   goconst:
     min-len: 2
     min-occurrences: 2
 
 issues:
-  exclude-dirs-use-default: false
   exclude-dirs:
     - vendor
     - third_party
     - hack
+  exclude-rules:
+    - linters:
+        - staticcheck
+      text: "SA1019|SA1029|SA5011"
