--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,11 @@
+version: "2"
+
 run:
   timeout: 10m
 
 linters:
   enable:
-    - errcheck
+    #    - errcheck
     - govet
     - ineffassign
     - staticcheck
@@ -16,11 +18,16 @@ linters:
 
 linters-settings:
   govet:
+    check-shadowing: false
+    settings:
+      printf:
+        funcs:
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
     disable:
-      - deepequalerrors
       - fieldalignment
-      - shadow
-      - unsafeptr
 
   gocritic:
     enabled-checks:
